# camera_heightmap

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml  readme.txt
data/: heightmap.txt  heightmap11.txt  heightmap12.txt  heightmap18.txt  heightmap22.txt  heightmaprough.txt  pcd_5061.pcd  pcd_50610.pcd  scoremap.txt  scoremap11.txt  scoremap12.txt  scoremap18.txt  scoremap22.txt  scoremaprough.txt  test_pcd.pcd
include/: travprocess.h
launch/: hsload.launch  mypcl.launch  mypcl.rviz  mypcl_435i.launch  pcdprocess.launch  pcdprocess435.launch
src/: depthprocess.cpp  downsample.cpp  downsample435.cpp  hsload.cpp  pcdprocess.cpp  pcdprocess435.cpp  pclload.cpp  pclsave.cpp  travprocess.cpp  xlimit.cpp  ylimit.cpp  zlimit.cpp
